[metadata]
name = cachex
version = 0.1.0
url = https://github.com/malversoft/cachex/
author = Fernando Lordán
author_email = malversoft@gmail.com
license = MIT
license_file = LICENSE.txt
description = Memoizing cache classes and decorator.
long_description = file: README.md
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Environment :: Other Environment
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.5
install_requires =
    cachetools >= 4.0.0

[options.packages.find]
exclude =
    tests
    tests.*
